# fastapi-template

./: Dockerfile  pyproject.toml
app/: __main__.py
app/core/: config.py
app/database/: base.py  manager.py  session.py
app/models/: __init__.py  user.py
app/services/: base.py
